View Quizzes page no longer visible for people not logged in

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -30,3 +30,8 @@
   text-align: right;
   padding: 5px;
 }
+
+.loading {
+  padding-top: 20px;
+  padding-left: 20px;
+}
